@@ -6,34 +6,42 @@ module Netzke
 
         protected
 
-          def netzke_ext_css_include(theme)
+          def netzke_ext_css_include(params)
             # ExtJS base
-            res = stylesheet_link_tag("/extjs/resources/css/ext-all")
+            res = ["/extjs/resources/css/ext-all"]
 
             # ExtJS theming
-            res << "\n" << stylesheet_link_tag("/extjs/resources/css/xtheme-#{theme}") unless theme.to_sym == :default
+            res << "/extjs/resources/css/xtheme-#{params[:theme]}" if params[:theme]
 
-            # Netzke-related (dynamically generated by NetzkeController)
-            res << "\n" << stylesheet_link_tag("/netzke/ext")
+            # Netzke-related dynamic css
+            res << "/netzke/ext"
 
-            res << "\n" << stylesheet_link_tag(Netzke::Core.external_ext_css)
+            res += Netzke::Core.external_ext_css
 
-            res
+            stylesheet_link_tag(res, :cache => false && params[:cache]) # caching is not possible at this time, as the stylesheets use relative asset paths
           end
 
-          def netzke_ext_js_include
-            res = []
+          def netzke_ext_js_include(params)
+            # ExtJS stuff
+            res = if ENV['RAILS_ENV'] == 'development'
+              [
+                "/extjs/adapter/ext/ext-base-debug",
+                "/extjs/ext-all-debug"
+              ]
+            else
+              [
+                "/extjs/adapter/ext/ext-base",
+                "/extjs/ext-all"
+              ]
+            end
 
-            # ExtJS
-            res << (ENV['RAILS_ENV'] == 'development' ? javascript_include_tag("/extjs/adapter/ext/ext-base-debug", "/extjs/ext-all-debug") : javascript_include_tag("/extjs/adapter/ext/ext-base", "/extjs/ext-all"))
+            # Netzke-related dynamic JavaScript
+            res << "/netzke/ext"
 
-            # Netzke (dynamically generated)
-            res << javascript_include_tag("/netzke/ext")
-
-            res.join("\n")
+            javascript_include_tag(res, :cache => params[:cache])
           end
 
-          def netzke_ext_js
+          def netzke_ext_js(params)
             res = []
             res << content_for(:netzke_js_classes)
             res << "\n"
@@ -42,7 +50,7 @@ module Netzke
             res << content_for(:netzke_on_ready)
             res << "});"
 
-            javascript_tag res.join("\n")
+            javascript_tag(res.join("\n"))
           end
 
           # (Experimental) Embeds a "pure" (non-Netzke) Ext component into the view, e.g.:
