@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>RailsApp</title>
+  <title>Netzke Core Test App</title>
   <%= csrf_meta_tag %>
   <%= netzke_init %>
 </head>
