@@ -3,7 +3,7 @@
 <head>
   <title>Netzke Touch</title>
   <%= csrf_meta_tag %>
-  <%= netzke_init :platform => :touch %>
+  <%= netzke_init :platform => :touch, :cache => "touch" %>
 </head>
 <body>
 
